<resources>
    <string name="app_name">Kurir Kurindo</string>
    <string name="app_yes">YES</string>
    <string name="app_no">NO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="checkout">Checkout</string>
    <string name="label_kurir">Kurir</string>
    <string name="label_agent">Agen</string>
    <string name="label_client">Pelanggan</string>
    <string name="pref_settings_autologin_key">isAutoLoggedIn</string>
    <string name="pref_settings_autologin_title">Auto Login</string>
    <string name="pref_settings_autologin_description">User automatically login when application started.</string>
    <string name="navigation_title">My navigation title</string>
    <string name="product_list">Product List</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="name">Nama</string>
    <string name="unit_price">Harga Satuan</string>
    <string name="quantity">Jumlah</string>
    <string name="view">View</string>
    <string name="action">Action</string>
    <string name="order">Order</string>
    <string name="price">Harga</string>
    <string name="price_rp">Harga (Rp)</string>
    <string name="total_shipping_cost">Biaya Kurir</string>
    <string name="total_price">Total Harga</string>
    <string name="payment">Payment</string>
    <string name="remove">Remove</string>
    <string name="clear_cart">Clear</string>
    <string name="shop">Shop</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="lorem_ipsum1">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="lorem_ipsum2">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="lorem_ipsum3">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>
    <string name="tab_title">Tab title</string>
    <string name="select_recipient">Select Recipient</string>
    <string name="select_payment">Select Payment</string>
    <string name="confirm_order">Order Confirmation</string>
    <string name="under_development">Under Development</string>
    <string-array name="genders_array">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="levels_array">
        <item>Kecamatan</item>
        <item>Kabupaten</item>
        <item>Kota</item>
        <item>Propinsi</item>
        <item>Negara</item>
    </string-array>
    <string-array name="shop_categories_array">
        <item>Umum</item>
        <item>Souvenier</item>
        <item>Fashion</item>
        <item>Kuliner</item>
        <item>Herbal</item>
    </string-array>
    <string-array name="dohijamah_layanan_array">
        <item>-Pilih-</item>
        <item>Bekam</item>
        <item>Fisioterapi</item>
        <item>Konsultasi</item>
    </string-array>
    <string-array name="pilih_lokasi_array">
        <item>Lokasi saat ini</item>
        <item>Homebase</item>
    </string-array>
    <string-array name="doservice_layanan_array">
        <item>-Pilih-</item>
        <item>Cuci AC</item>
        <item>Service AC</item>
        <item>Cuci &#38; Service AC</item>
        <item>Pasang AC</item>
        <item>Bongkar AC</item>
        <item>Relokasi AC</item>
    </string-array>
    <string-array name="doservice_tipeac_array">
        <item>-Pilih-</item>
        <item>Split 0.5 - 1 PK</item>
        <item>Split 1.5 - 2 PK</item>
        <item>Inverter 0.5 - 1 PK</item>
        <item>Inverter 1.5 - 2 PK</item>
        <item>Cassete</item>
        <item>Standing</item>
        <item>Central</item>
    </string-array>
    <string-array name="doservice_lokasi_array">
        <item>-Pilih-</item>
        <item>Rumah</item>
        <item>Toko</item>
        <item>Swalayan</item>
        <item>Kantor</item>
    </string-array>
    <string-array name="tipe_product_array">
        <item>Produk</item>
        <item>Jasa</item>
    </string-array>
    <string-array name="docar_tujuan_array">
        <item>City Tour</item>
        <item>Dalam Kota</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="shop_information">Shop Information</string>
    <string name="shop_address">Shop Address</string>
    <string name="confirmation">Confirmation</string>
    <string name="product_information">Informasi Produk</string>
    <string name="dowash_form1">Do Wash Form</string>
    <string name="branch_information">Form Cabang Toko</string>
    <string name="telepon">WA/Telepon</string>
    <string name="telepon_pengirim">WA/Telepon Pengirim</string>
    <string name="telepon_penerima">WA/Telepon Penerima</string>
    <string name="telepon_pengelola">WA/Telepon Pengelola</string>
    <string name="pin_single_location">Pin Single Location</string>
    <string name="category">Kategori</string>
    <string name="shop_tools">Perlengkapan Toko</string>
    <string name="end_user_agreement">End User Agreement</string>
    <string name="nomor_telepon">Nomor Telepon/WA</string>
    <string name="enter_valid_phone">Masukkan Nomor Telepon yang Valid</string>
    <string name="label_regular">REGULAR</string>
    <string name="label_flash">FLASH</string>
    <string name="label_express">EXPRESS</string>
    <string name="doservice_form1">Do-SERVICE Form</string>
    <string name="domart_form">DO-MART Form</string>
    <string name="product_name">Nama Produk</string>
    <string name="product_description_long">Product Description (Long)</string>
    <string name="product_description_short">Product Description (short)</string>
    <string name="stock">Stok</string>
    <string name="image">Gambar</string>
    <string name="add_image">Tambah Gambar</string>
    <string name="weight">Berat</string>
    <string name="product_description">Deskripsi Produk</string>
    <string name="weight_kg">Berat (Kg)</string>
    <string name="shop_open_form">Panduan Buka Toko</string>
    <string name="kurir_open_form">Panduan Menjadi Kurir</string>
    <string name="dohijamah_form">Do-HIJAMAH Form</string>
    <string name="docar_form">Do-CAR Form</string>
    <string name="label_shoppic">Pemilik Toko</string>
    <string name="label_branch">Mitra Cabang</string>
    <string name="label_mitra">Mitra Cabang</string>
    <string name="label_shopres">Reseller Toko</string>
    <string name="dowash_type1">KAOS - KEMEJA - CELANA</string>
    <string name="dowash_type2">SPREI - BED COVER- GORDYN</string>
    <string name="packet">Paket Pengiriman</string>
    <string name="location_address">Alamat Lokasi</string>
    <string name="detail">Detail</string>
    <string name="label_docar_shuttle">Shuttle - Antar -Jemput</string>
    <string name="label_docar_rental">Rental Mobil</string>
    <string name="label_docar_wisata">Wisata</string>
    <string name="label_fullday">Full Day</string>
    <string name="label_12jam">12 Jam</string>
    <string name="label_8jam">8 jam</string>
    <string name="label_allin">All In</string>
    <string name="label_bbminclude">Sopir &#38; BBM</string>
    <string name="label_tanpabbm">Sopir Tanpa BBM</string>
    <string name="label_dengansopir">Dengan Sopir</string>
    <string name="label_tanpasopir">Tanpa Sopir</string>
    <string name="label_reason1">Mohon maaf, Kurir kami sedang full order, Silahkan untuk memilih pilihan jam pickup/drop point di waktu yang lain</string>
    <string name="label_reason2">Mohon maaf, Hari ini kami sedang libur beroperasi dan mohon maaf atas ketidaknyamanannya</string>
    <string name="label_reason3">Orderan tidak relevan, mohon ulangi kembali membuat order yang baru</string>
    <string name="label_reason4">Mohon maaf, Layanan belum tersedia di area anda</string>
    <string name="label_reason5">Tuliskan alasan lainnya</string>
    <string name="label_other_location">Tentukan lokasi lainnya</string>
    <string name="label_homebase">Gunakan my Homebase</string>
    <string name="label_usecurrent">Gunakan lokasi terakhir</string>
    <string name="label_location_filter">Filter berdasarkan lokasi</string>
    <string name="label_set_location">Set Lokasi Anda</string>
    <string name="label_doservice">DO-SERVICE</string>
    <string name="label_dowash">DO-WASH</string>
    <string name="label_domove">DO-MOVE</string>
    <string name="label_docar">DO-CAR</string>
    <string name="label_doshop">DO-SHOP</string>
    <string name="label_domart">DO-MART</string>
    <string name="label_dojek">DO-JEK</string>
    <string name="label_dosend">DO-SEND</string>
    <string name="label_all">All</string>
</resources>