<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true" android:focusableInTouchMode="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/tv_formTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="10dp"
        android:gravity="center" android:layout_marginBottom="10dp"
        android:textSize="15sp" android:textStyle="bold" android:text="Pilih Kurir"/>

    <!-- select kurir -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_margin="10dp"
        android:layout_width="match_parent" android:visibility="gone"
        android:layout_height="match_parent"
        android:padding="1dp" android:divider="#b5b5b5" android:dividerHeight="1dp"
        android:listSelector="@drawable/states_selector_list" android:background="@drawable/list_border"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <LinearLayout
        android:id="@+id/layoutReject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">
        <RadioGroup
            android:id="@+id/radio_group_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="2dp" android:layout_marginBottom="2dp"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_reason1"
                android:layout_width="wrap_content" android:paddingTop="5dp"
                android:layout_height="wrap_content"
                android:text="@string/label_reason1" android:checked="true"
                />

            <RadioButton android:id="@+id/radio_reason2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="5dp"
                android:text="@string/label_reason2"
                />
            <RadioButton android:id="@+id/radio_reason3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="5dp"
                android:text="@string/label_reason3"
                />
            <RadioButton android:id="@+id/radio_reason4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="5dp"
                android:text="@string/label_reason4"
                />
            <RadioButton android:id="@+id/radio_reason5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="5dp"
                android:text="@string/label_reason5"
                />
        </RadioGroup>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inlay_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/input_reason" android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_assignment_black"
                android:hint="Reason" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>
